# notify-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_consumer.py
.github/workflows/: ci-cd.yml
.gitlab/: gitlab-ci.yml
alembic/: env.py
alembic/versions/: 2026_03_27_2226-21563c17532b_initial_commit.py  2026_03_30_1641-443cf098d122_add_status_field_notification_table.py  2026_04_21_1732-ba399f189fa1_add_notification_updated_at_and_status_.py
k8s/: deployment.yaml  k8s_deployment.md  notify-service.yaml  postgres-service.yaml
src/: config.py  database.py  main.py
src/api/v1/: router.py
src/api/v1/auth/: dependencies.py
src/api/v1/notifications/: dependencies.py  exceptions.py  logging_service.py  models.py  push_service.py  queue_consumer.py  queue_producer.py  redis_pubsub.py  repository.py  router.py  schemas.py  service.py
tests/notifications/: conftest.py  test_notifications_api.py  test_notifications_model.py  test_notifications_repository.py  test_notifications_service.py
