[project]
name = "notify-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "detect-secrets>=1.5.0",
    "fastapi[standard]>=0.135.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "redis>=7.4.0",
    "sentry-sdk>=2.55.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]
